@@ -1,6 +1,7 @@
 package CSE4186.interview.controller.dto;
 
 import CSE4186.interview.entity.Post;
+import CSE4186.interview.entity.PostVideo;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.swagger.v3.oas.annotations.media.Schema;
@@ -23,6 +24,8 @@ public class PostDto {
         private String content;
         @NotNull
         private Long userId;
+        @NotNull
+        private List<Long> videoIdList;
     }
 
     @Data
@@ -51,6 +54,7 @@ public class PostDto {
         private final Long userId;
         private String checkLikeOrDislike;
         private final List<CommentDto.Response> comments;
+        private final List<PostVideoDto.Response> videoList;
 
         public Response(Post post) {
             this.id = post.getId();
@@ -59,10 +63,11 @@ public class PostDto {
             this.createdAt = String.valueOf(post.getCreatedAt());
             this.updatedAt = String.valueOf(post.getUpdatedAt());
             this.userId = post.getUser().getId();
-            this.comments = post.getComments().stream().map(CommentDto.Response::new).collect(Collectors.toList());
+            this.comments = post.getComments().stream().map(CommentDto.Response::new).toList();
             this.like = post.getLikeCount();
             this.dislike = post.getDislikeCount();
             this.viewCount = post.getViewCount();
+            this.videoList = post.getPostVideo().stream().map(PostVideoDto.Response::new).toList();
         }
 
         public Response(Post post, String checkLikeOrDislike) {
@@ -77,6 +82,7 @@ public class PostDto {
             this.dislike = post.getDislikeCount();
             this.viewCount = post.getViewCount();
             this.checkLikeOrDislike = checkLikeOrDislike;
+            this.videoList = post.getPostVideo().stream().map(PostVideoDto.Response::new).toList();
         }
     }
 
